New code for initiates

--- a/_corporate/zsponsors.html
+++ b/_corporate/zsponsors.html
@@ -1,8 +1,7 @@
 ---
-title: Sponsors
+title: Sponsors (Fall 2016 - Spring 2017)
 ---
 
-<h2>Sponsors Fall 2015 - Spring 2016</h3>
 
 {% for sponsor in site.data.sponsors %}
 <div class='sponsor'>
