--- a/initiates/index.html
+++ b/initiates/index.html
@@ -9,6 +9,16 @@ title: Initiates
 </div>
 {% endfor %}
 
+<nav style="float: left; max-width: 160px; margin: 0; padding: 1em;">
+    <ul style="list-style-type:square">
+        <li><a href="#i1">Initiates</li>
+        <li><a href="#i2">Events</li>
+        <li><a href="#i3">Initiation Requirements</li>
+    </ul>
+</nav>
+
+<article>
 {% contentfor hero-image-title %}
 Initiates
 {% endcontentfor %}
+</article>
