--- a/service/index.html
+++ b/service/index.html
@@ -8,6 +8,15 @@ layout: page
 </div>
 {% endfor %}
 
+<nav style="float: left; max-width: 160px; margin: 0; padding: 1em;">
+    <ul style="list-style-type:square">
+        <li><a href="#s1">Student Service<a></li>
+        <li><a href="#s2">Dr. Everitt's Neighborhood<a></li>
+        <li><a href="#s3">Review Sessions<a></li>
+    </ul>
+</nav>
+
+<article>
 {% contentfor sidebar-title %}
 Student Service
 {% endcontentfor %}
@@ -15,3 +24,4 @@ Student Service
 {% contentfor hero-image-title %}
 Student Service
 {% endcontentfor %}
+</article>
